# TasksForEmployees

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
backend/config/: settings.py
backend/restaurant/: models.py
backend/user/: admin.py  models.py
