[tool.poetry]
name = "tasksforemployees"
version = "0.1.0"
description = ""
authors = ["Dima Shelepin <oladushkin777@gmail.com>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
djangorestframework = "^3.15.1"
pre-commit = "^3.7.0"
isort = "^5.13.2"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
